. [FIX] FileUtils: Loads -hd resources even if the sd resource is not present (issue #1179)
. [FIX] FileUtils: renamed ccRemoveSuffixFromFile to +[CCFileUtils removeSuffixFromFile:];
. [FIX] FileUtils: localized resources can be loaded using fullPathFromRelativePath (issue #1230)
. [FIX] LayerColor: init calls initWithColor:width:height (issue #1226)
. [FIX-MAC] Director: Only call set setAcceptsTouchEvents: when OS X >= 10.6 (issue #1225)

version 1.0.1 - 28-July-2011
. [FIX] All: Implicit atomic properties converted to nonatomic
. [FIX] All: Removed deprected code
. [FIX] CCArray: copyWithZone fixed
. [FIX] Director: frames -> totalFrames, and it works as expected. Value is not being reset.
. [FIX] Menu: If any ancestor is invisible, then touches won't be accepted
. [FIX] Node: vertexZ returns points, not "pixels"
. [FIX] LabelTTF: don't crash when calling description after dealloc
. [FIX] Tests: [window release] instead of [window dealloc]
. [FIX] Texture: TextureCache#dump reports the right info (issue #1205)
. [FIX-MAC] CocosDenshion: Cleanup buffers to prevent noise

version 1.0.0 - 13-July-2011
. [NEW] ccpSegmentIntersect & ccpPointIntersect: Added helper functions for ccpLineIntersect (issue #1193)
. [NEW] ccConfig: Added possibility to define the configuration as preprocessor macros
. [NEW] Director: frames is a readonly property
. [NEW] Menu: MenuItemFont can change size and font from instance (issue #1192)
. [NEW] Scheduler: Added isTargetPaused method
. [NEW] Sprite: Debugging draw for texture (issue #879)
. [NEW] Textures: PVR supports NPOT textures
. [FIX] CCArray: ForEach prepends "__" to inner variables to prevent conflict
. [FIX] ccpLineIntersect works as expected. Improved performance (issue #1174, #1193)
. [FIX] cocosLive: fixed memory leak in ScoreServerPost
. [FIX] Director: Added asserts to prevent calling startAnimation twice.
. [FIX] EAGLView: Fixed leak when using multisampling and resizing the layer (issue #1198)