@@ -9,6 +9,8 @@ version 1.1 - XX-Ago-2011
 . [FIX] FileUtils: renamed ccRemoveSuffixFromFile to +[CCFileUtils removeSuffixFromFile:];
 . [FIX] FileUtils: localized resources can be loaded using fullPathFromRelativePath (issue #1230)
 . [FIX] LayerColor: init calls initWithColor:width:height (issue #1226)
+. [FIX] Texture2D: drawAtPoint uses the correct vertices
+. [FIX] Texture2D: drawAtPoint, drawInRect disables color state (issue #1222)
 . [FIX-MAC] Director: Only call set setAcceptsTouchEvents: when OS X >= 10.6 (issue #1225)
 
 version 1.0.1 - 28-July-2011
